# pys-cli

./: .gitignore  README.md  pyproject.toml
cli/: __main__.py  args.py  cache.py  create.py  git.py  pyproject.py  pytest.py  toolchain.py
cli/builder/: build.py  nuitka.py  pyinstaller.py  qt.py
